--- a/api/pom.xml
+++ b/api/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.mycompany-community</groupId>
+        <groupId>com.mycompany-community-pivanets</groupId>
         <artifactId>boot-community-demo</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0-PIVANETS-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -16,7 +16,7 @@
     <properties>
         <debug.port>8002</debug.port>
     </properties>
-    
+
     <build>
         <finalName>api</finalName>
         <plugins>
@@ -33,7 +33,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.mycompany-community</groupId>
+            <groupId>com.mycompany-community-pivanets</groupId>
             <artifactId>boot-community-demo-core</artifactId>
         </dependency>
         <dependency>
