--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.mycompany-community</groupId>
+        <groupId>com.mycompany-community-pivanets</groupId>
         <artifactId>boot-community-demo</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0-PIVANETS-SNAPSHOT</version>
     </parent>
-    
+
     <modelVersion>4.0.0</modelVersion>
     <artifactId>boot-community-demo-core</artifactId>
     <packaging>jar</packaging>
-    
+
     <name>Community Demo Core</name>
     <description>Customizations And Extensions For Broadleaf Commerce Services And Entities</description>
-    
+
     <dependencies>
         <dependency>
             <groupId>org.broadleafcommerce</groupId>
@@ -45,6 +45,12 @@
         <dependency>
             <groupId>com.google.javascript</groupId>
             <artifactId>closure-compiler-unshaded</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
