--- a/site/pom.xml
+++ b/site/pom.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.mycompany-community</groupId>
-        <artifactId>boot-community-demo</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+      <groupId>com.mycompany-community-pivanets</groupId>
+      <artifactId>boot-community-demo</artifactId>
+      <version>1.0.0-PIVANETS-SNAPSHOT</version>
     </parent>
-    
+
     <modelVersion>4.0.0</modelVersion>
     <artifactId>boot-community-demo-site</artifactId>
     <packaging>jar</packaging>
-    
+
     <name>Community Demo Site</name>
     <description>Web Module For Customized Broadleaf Commerce Site</description>
-    
+
     <properties>
         <debug.port>8000</debug.port>
     </properties>
-    
+
     <build>
         <finalName>ROOT</finalName>
         <plugins>
@@ -30,10 +30,10 @@
             </plugin>
         </plugins>
     </build>
-    
+
     <dependencies>
         <dependency>
-            <groupId>com.mycompany-community</groupId>
+            <groupId>com.mycompany-community-pivanets</groupId>
             <artifactId>boot-community-demo-core</artifactId>
         </dependency>
         <dependency>
